...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLabel"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_border"
            android:backgroundTint="#22056F8F"
...
            android:hint="Enter Username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_border"
            android:backgroundTint="#2A056F8F"
            android:drawableRight="@drawable/ic_lock_black_24dp"
...
