...
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|left|center_vertical"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
...
